force-app/main/default/objects/Industry__c/fields/Image_field__c.field-meta.xml
<CustomField>
    <fullName>Image_field__c</fullName>
    <label>Image_field</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>