force-app/main/default/objects/Industry__c/fields/Long_text_field__c.field-meta.xml
<CustomField>
    <fullName>Long_text_field__c</fullName>
    <label>Long_text_field</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>