force-app/main/default/objects/Industry__c/fields/Lookup_Key__c.field-meta.xml
<CustomField>
    <fullName>Lookup_Key__c</fullName>
    <externalId>true</externalId>
    <label>Lookup_Key</label>
    <length>18</length>
    <type>Text</type>
</CustomField>